recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:5: error: type mismatch;
 found   : Int(1)
 required: String
  spiral(steps-1,angle,length+1,increment)+1
                                           ^